# CITS3200---National-Housing-Simulation

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  bashrc  configurations.yml  devbox.json  devenv.nix  devenv.yaml  pyproject.toml  pyrightconfig.json  syncdata.py  test.parquet  test.py
.github/: ISSUE_TEMPLATE.md  config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-DEV_ISSUE.md  2-DEV_FEATURE.md  3-BUG_REPORT.md  4-FEATURE_REQUEST.md  BUG_REPORT.md  DEV_FEATURE.md  DEV_ISSUE.md  FEATURE_REQUEST.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: auto-branch-pr.yml  python-ci.yml
.nix/: libs.nix
2. transformation/: houses.py
area_matching/: area_matcher.ipynb  area_matcher.py
examples/: load_psv_files.py
extraction/: gnaf.py
nhs/: __init__.py  __main__.py  config.py  logging.py
nhs/data/: __init__.py  allocation.py  category.py  category_system.py  column_fix.py  filter.py  geography.py  handling.py  join_on_sa1.py  mapping.py  polars-conversion-random.py
nhs/filter/: __init__.py  filter_sa1_regions.py
nhs/utils/: __init__.py  common.py  logging.py  meta_data.py  parallel.py  path.py  sequence.py  string.py  time.py  wrappers.py
nhs/utils/data/: handling.py
poetry-env/: pyvenv.cfg
scripts/: configuration.py  context.py  gnaf_to_housing.py  home_allocation.py  join_shapefile_to_gnaf.py  join_structures_with_shapefile_areas.py  spreadsheet_to_parquet.py
tests/: context.py
tests/test_data/: test_allocation.py  test_column_fix.py  test_filter.py  test_geography.py  test_handling.py  test_mapping.py
tests/test_filter/: test_filter_sa1_regions.py
tests/test_utils/: test_meta_data.py  test_path.py  test_string.py
typings/fiona/: _path.pyi  drvsupport.pyi  env.pyi  errors.pyi  meta.pyi  session.pyi
typings/geopandas/: __init__.pyi  _compat.pyi  _config.pyi  _decorator.pyi  _vectorized.pyi  _version.pyi  array.pyi  base.pyi  conftest.pyi  explore.pyi  geodataframe.pyi  geoseries.pyi  plotting.pyi  sindex.pyi  testing.pyi
typings/geopandas/datasets/: __init__.pyi
typings/geopandas/io/: _pyarrow_hotfix.pyi  arrow.pyi  file.pyi  sql.pyi  util.pyi
typings/geopandas/tools/: __init__.pyi  _random.pyi  _show_versions.pyi  clip.pyi  geocoding.pyi  hilbert_curve.pyi  overlay.pyi  sjoin.pyi  util.pyi
typings/pathos/: abstract_launcher.pyi  multiprocessing.pyi  parallel.pyi  pools.pyi  serial.pyi  threading.pyi
typings/pathos/helpers/: __init__.pyi  mp_helper.pyi  pp_helper.pyi
