[tool.poetry]
name = "cits3200-project"
version = "0.1.0"
description = "Python packages for the CITS3200 Project"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.3.0"
loguru = "^0.7.2"
pytest = "^8.3.2"
black = "^24.4.2"
matplotlib = "^3.9.1"
cytoolz = "^0.12.3"
ipykernel = "^6.29.5"
fastexcel = "^0.11.5"
jupyter-black = "^0.3.4"
isort = "^5.13.2"
pathos = "^0.3.2"
pyright = "^1.1.316"
pytest-mock = "^3.14.0"
numpy = "^1.26.0"
geopandas = "^0.14.0"
pyproj = "^3.6.0"
fiona = "^1.9.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportMissingTypeStubs = false
strict = ["nhs"]
reportUnknownParameterType = true
reportUntypedFunctionDecorator = true
typeCheckingMode = "basic"
pythonVersion = "3.12"
include = ["**/*.py"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = ["syncdata.py", "src/oldstuff"]
defineConstant = { DEBUG = true }
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true